Nav links and active-state js added. navbar-collapse js fixed. New file for shared css.

--- a/style/intro.css
+++ b/style/intro.css
@@ -1,9 +1,3 @@
-h1 {
-    font-size: 30px;
-    font-family: 'Helvetica Neue', 'Roboto', Verdana, sans-serif;
-    font-weight: 300;
-}
-
 p {
     font-size: 24px;
     font-family: 'Helvetica Neue', 'Roboto', Verdana, sans-serif;
@@ -38,19 +32,4 @@ p {
 
 .tooltip-right {
     text-align: left;
-}
-
-.nav-font {
-    font-weight: bold;
-    font-size: 15px;
-}
-
-.nav-brand {
-    font-family: 'Special Elite', 'Helvetica Neue', 'Roboto', sans-serif;
-    font-weight: bold;
-    font-size: 18px;
-}
-
-a:link {
-    text-decoration:  none;
 }
